views/previous/past-events.scss
.center {
  margin-bottom: 40px;
  > iframe {
    width: 80vw;
    max-width: min(112vh, 1104px);
    height: min(45vw, 621px);
    max-height: 63vh;
    aspect-ratio: 16 / 9;
    border-radius: 12px;
    box-shadow: 2px 4px 10px 1px #0005;
  }
}
div.main-content {
  padding: 0;
  &::before {
    z-index: 1;
    pointer-events: none;
  }
  @media (max-width: 1499.9px) {
    &::before {
      display: none;
    }
  }
}

div.sponsor-grid {
  display: grid;
  justify-content: space-around;
  grid-auto-flow: row;
  grid-template-columns: repeat(auto-fit, 250px);
}

.row > .item a {
  display: block;
  height: 130px;
}

.helpers-container {
  display: grid;
  width: 100%;
  grid-auto-flow: row;
  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
  gap: 40px;
  padding: 0 40px;

  div.v3-person-container {
    box-sizing: border-box;
    display: flex;
    width: 100%;
    height: 150px;
    background-color: #231338;
    text-align: left;
    padding: 0 20px 0 0;
    border-radius: 20px;
    overflow: hidden;
    max-width: 560px;
    margin: auto;

    .person {
      width: 150px;
      height: 150px;
      margin-right: 20px;
      border-radius: 0;
    }
    > div { display: grid; align-content: center; }
    h3 { margin: 0 0 5px; }
    .name-title { margin: 0; color: #ccc; }
    .badge-container {
      margin-top: 20px;
      font-size: 14px;
      display: flex;
      gap: 8px;
    }
  
    .badge-container > span {
      padding: 4px 8px;
      display: inline-block;
      &[data-role="Judge"] { background-color: #922712; }
      &[data-role="Mentor"] { background-color: #006416; }
      &[data-role="Workshop Host"] { background-color: #056d76; }
    }

  }
  @media (max-width: 640px) {
    justify-content: center;
    div.v3-person-container {
      flex-direction: column;
      height: auto;
      width: 72vw;
      text-align: center;
      max-width: 350px;
      padding-inline: 16px;
      .person { margin: 20px auto; border-radius: 16px; }
      .badge-container { margin: 20px 25px; justify-content: center; }
    }
  }
}

